fix: replace the usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' to ensure that the list is unmodified